--- a/CppMonolith.vcxproj
+++ b/CppMonolith.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="BasicController.h" />
     <ClInclude Include="BFSResult.h" />
     <ClInclude Include="BFSService.h" />
+    <ClInclude Include="Defines.h" />
     <ClInclude Include="EdmondsKarpService.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="GraphController.h" />
