--- a/CppMonolith.vcxproj
+++ b/CppMonolith.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="BasicController.cpp" />
     <ClCompile Include="BFSResult.cpp" />
     <ClCompile Include="BFSService.cpp" />
+    <ClCompile Include="DirectedGraph.cpp" />
     <ClCompile Include="EdmondsKarpService.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="GraphController.cpp" />
@@ -149,18 +150,21 @@
     <ClCompile Include="GraphService.cpp" />
     <ClCompile Include="KeyboardInterruptHandler.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PushRelabelService.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicController.h" />
     <ClInclude Include="BFSResult.h" />
     <ClInclude Include="BFSService.h" />
     <ClInclude Include="Defines.h" />
+    <ClInclude Include="DirectedGraph.h" />
     <ClInclude Include="EdmondsKarpService.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="GraphController.h" />
     <ClInclude Include="GraphRepository.h" />
     <ClInclude Include="GraphService.h" />
     <ClInclude Include="KeyboardInterruptHandler.h" />
+    <ClInclude Include="PushRelabelService.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
