--- a/CppMonolith.vcxproj.filters
+++ b/CppMonolith.vcxproj.filters
@@ -78,6 +78,12 @@
     <ClCompile Include="KeyboardInterruptHandler.cpp">
       <Filter>Pliki źródłowe\Handlers</Filter>
     </ClCompile>
+    <ClCompile Include="DirectedGraph.cpp">
+      <Filter>Pliki źródłowe\Models</Filter>
+    </ClCompile>
+    <ClCompile Include="PushRelabelService.cpp">
+      <Filter>Pliki źródłowe\Services</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicController.h">
@@ -109,6 +115,12 @@
     </ClInclude>
     <ClInclude Include="Defines.h">
       <Filter>Pliki nagłówkowe\Defines</Filter>
+    </ClInclude>
+    <ClInclude Include="DirectedGraph.h">
+      <Filter>Pliki nagłówkowe\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="PushRelabelService.h">
+      <Filter>Pliki nagłówkowe\Services</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
